# celo-insight-engine

./: .dockerignore  .env.production  AI_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FLY_IO_DEPLOYMENT.md  GIT_SECRET_FIX.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  deploy-fly.sh  fix-git-history.sh  fly.toml  index.html  nixpacks.toml  package-lock.json  package.json  railway.toml  render.yaml  sentinel-x.service  setup_vllm.sh  start.sh  stop.sh  tailwind.config.ts  test_all_features.sh  vercel.json
backend/: .env  .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md  nixpacks.toml  railway.toml  test_api.sh
backend/src/: ai_engine.rs  celo_client.rs  config.rs  handlers.rs  indexer.rs  lib.rs  main.rs  models.rs  routes.rs
src/: App.tsx  index.css
src/components/: AIPlayground.tsx  Architecture.tsx  Comparison.tsx  DeveloperAPI.tsx  FAQ.tsx  Footer.tsx  HelpDialog.tsx  Hero.tsx  InteractiveArchitecture.tsx  LiveDashboard.tsx  MobileNav.tsx  Navbar.tsx  PageTransition.tsx  Problem.tsx  Products.tsx  Roadmap.tsx  ScrollProgress.tsx  Solution.tsx  UseCases.tsx  WhyCelo.tsx
src/components/ui/: button.tsx
src/hooks/: useScrollReveal.ts
src/lib/: api.ts
src/pages/: App.tsx  Docs.tsx  Index.tsx  Learn.tsx
